# egui_example

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/application/: ssh.rs
src/component/: component.rs  example.rs  mod.rs  vm_render.rs  window.rs
src/config/: logger.rs
src/font/: font.rs
src/gui/: layout.rs  left_session.rs  mod.rs
src/gui/component/: app_manager.rs  mod.rs  process_manager.rs  system_manager.rs
src/gui/component/center/: center.rs  mod.rs
src/gui/component/left/: left_session.rs  mod.rs
src/gui/component/top/: color_window.rs  mod.rs  session_window.rs  ssh_component.rs  top_navigation.rs
src/gui/home/: layout.rs
src/gui/navigation/: mod.rs  navigation.rs  settings_color.rs  settings_session.rs  ssh_component.rs
src/ui/: mod.rs
src/ui/component/: network_manager.rs
src/ui/home/: layout.rs  mod.rs  navigation.rs
src/win32/: mod.rs  process.rs
