[package]
name = "egui_example"
version = "0.1.0"
edition = "2021"



[dependencies]
egui = "0.32.0"
eframe = "0.32.0"
egui_extras="0.32.0"
image = "0.25.5"

fern = "0.7.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
chrono = "0.4"
tokio = {version = "1.40.0", features = ["full"] }
