[package]
name = "egui_example"
version = "0.1.0"
edition = "2021"




[dependencies]
egui = {version = "0.32.0", features = ["default"]}
eframe =  {version = "0.32.0", features = ["wgpu", "glow"]}
image = "0.25.5"
fern = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
chrono = "0.4"
tokio = {version = "1.40.0", features = ["full"] }
uuid = {version = "1.18.0", features = ["v4"]}
ssh2 = "0.9"

